# multi-robot-digital-twin

./: .gitignore  README.md
docs/: multi_robot_digital_twin_notes.md  simulation_environment_guide.md
src/mycar_base_sim/: CMakeLists.txt  README.md  package.xml
src/mycar_base_sim/app/: base_sim_twin.launch.py  base_sim_twin_robot2.launch.py  car2_domain_bridge.launch.py
src/mycar_base_sim/config/: sim_car_tf_twin.yaml  sim_car_tf_twin_robot2.yaml
src/mycar_base_sim/include/mycar_base_sim/: sim_car_tf_twin.hpp
src/mycar_base_sim/scripts/: domain_topic_bridge.py
src/mycar_base_sim/src/: sim_car_tf_twin.cpp
src/mycar_sim_bringup/: CMakeLists.txt  README.md  package.xml
src/mycar_sim_bringup/launch/: sim_bringup.launch.py  sim_bringup_no_rviz.launch.py  sim_bringup_two_cars.launch.py  sim_bringup_two_cars_no_rviz.launch.py
src/wheeltec_robot_urdf/: CMakeLists.txt  README.md
src/wheeltec_robot_urdf/config/: ros2_controllers.yaml
src/wheeltec_robot_urdf/launch/: display_gazebo.launch.py
src/wheeltec_robot_urdf/map/: my_map.pgm  my_map.yaml  my_map1.pgm  my_map1.yaml
src/wheeltec_robot_urdf/rviz/: car1.rviz  car2.rviz  default.rviz
src/wheeltec_robot_urdf/urdf/: V550_akm_robot.urdf
src/wheeltec_robot_urdf/world/: my_map.world  my_map1.world
