<?xml version="1.0"?>
<package format="3">
  <name>mycar_base_sim</name>
  <version>0.3.0</version>
  <description>Digital twin base simulation without joystick. Uses TF map->base_footprint for Gazebo pose and cmd_vel for wheel animation.</description>
  <maintainer email="baater@example.com">baater</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>gazebo_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
